<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="loan">Loan</string>
    <string name="add_new_property">Add new property</string>
    <string name="agent">Agent</string>
    <string name="price_min">Min price</string>
    <string name="dash">-</string>
    <string name="price_max">Max price</string>
    <string name="area_min">Min area</string>
    <string name="area_max">Max area</string>
    <string name="room_min">Min room</string>
    <string name="room_max">Max room</string>
    <string name="bedroom_min">Min bedroom</string>
    <string name="bedroom_max">Max bedroom</string>
    <string name="bathroom_min">Min bathroom</string>
    <string name="bathroom_max">Max bathroom</string>
    <string name="entry_date_min">Min date</string>
    <string name="entry_date_max">Max date</string>
    <string name="sold_date_min">Min solde date</string>
    <string name="sold_date_max">Max solde date</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="no_result">No result</string>
    <string name="loan_amount">Loan amount</string>
    <string name="interested_rate">Interested rate</string>
    <string name="number_of_year">Number of year</string>
    <string name="calculate">Calculate</string>
    <string name="total_amount">Total amount</string>
    <string name="total_interest">Total interest</string>
    <string name="annual_payment">Annual payment</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="currency">Currency</string>
    <string name="description">Description</string>
    <string name="n_a">N/A</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="price">Price</string>
    <string name="type">Type</string>
    <string name="near_by">Near by</string>
    <string name="location">Location</string>
    <string name="area_in_square_meter">Surface in m²</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="address">Address</string>
    <string name="postcode">PostalCode</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="restaurants">Restaurants</string>
    <string name="bars">Bars</string>
    <string name="stores">Stores</string>
    <string name="parks">Parks</string>
    <string name="schools">Schools</string>
    <string name="hospitals">Hospital</string>
    <string name="available_date">Available date</string>
    <string name="refresh">Refresh</string>
    <string name="modify">Edit</string>
    <string name="dialog_title_gps">GPS is not enable</string>
    <string name="dialog_message_gps">Please, turn your gps on to get your location</string>
    <string name="dialog_positive">Yes</string>
    <string name="dialog_negative">No</string>
    <string name="dialog_title_internet">Internet is off</string>
    <string name="dialog_message_internet">Please, turn on your internet to display all the properties</string>
    <string name="dialog_button_wifi">Wifi</string>
    <string name="dialog_button_data">Data</string>
    <string name="add_agent_menu">Add agent</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="storage_perm_request">App need storage permission</string>
    <string name="allow_storage">Please, allow storage permission to add pictures</string>
    <string name="validate_menu">Validate</string>
    <string name="add_agent">Add Agent</string>
    <string name="create_agent_first">Please, create an agent first</string>
    <string name="button_add_agent">Add Agent</string>
    <string name="add_property_title">Add Property</string>
    <string name="manage_by">Manage by</string>
    <string name="button_add_property">Add property</string>
    <string name="add_photos">ADD PICTURES</string>
    <string name="Cant_be_empty">Can t be empty</string>
    <string name="take_new_picture">Take a new picture</string>
    <string name="pick_from_library">Select from gallery</string>

    <string-array name="type_of_properties">
        <item>Type</item>
        <item>Flat</item>
        <item>Penthouse</item>
        <item>Duplex</item>
        <item>Villa</item>
        <item>Manor</item>
    </string-array>

    <string-array name="number_of_rooms">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>
    </string-array>
</resources>
