<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_main_activity_refresh"
        android:icon="@drawable/refresh"
        app:showAsAction="always"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_toolbar_currency"
        android:icon="@drawable/euro"
        app:showAsAction="always"
        android:title="@string/currency"/>

    <item
        android:id="@+id/menu_details_property_modify"
        android:icon="@drawable/edit"
        app:showAsAction="ifRoom"
        android:title="@string/modify"/>

    <item
        android:id="@+id/menu_main_activity_search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:title="@string/search"/>

</menu>