<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp"
    tools:context=".ui.addAgent.AddAgentFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/add_a_photo_24"
        app:layout_constraintBottom_toTopOf="@id/price"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:drawableStart="@drawable/dollar"
        android:drawablePadding="5dp"
        android:hint="@string/price"
        android:inputType="number"
        android:maxLength="9"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/area"
        app:layout_constraintTop_toBottomOf="@id/photo"
        tools:text="$2,000,000" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:drawableStart="@drawable/area"
        android:drawablePadding="10dp"
        android:hint="@string/area_in_square_meter"
        android:importantForAutofill="no"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/price"
        tools:text="500" />

    <View
        android:id="@+id/divider_1"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:paddingStart="5dp"
        android:paddingBottom="2dp"
        android:text="@string/type"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/sp_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/room"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:paddingBottom="2dp"
        android:text="@string/rooms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/type"
        app:layout_constraintLeft_toRightOf="@id/type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/type"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/sp_type"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/roomSpinner"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/roomSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintLeft_toRightOf="@id/sp_type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bedroom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="2dp"
        android:text="@string/bedrooms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bathroom"
        app:layout_constraintTop_toBottomOf="@id/sp_type"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/bathroom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="2dp"
        android:text="@string/bathrooms"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/bedroom"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_type"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/bedroomSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintBottom_toTopOf="@id/divider2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bathroomSpinner"
        app:layout_constraintTop_toBottomOf="@id/bedroom" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/bathroomSpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/custom_spinner_background"
        app:layout_constraintBottom_toBottomOf="@id/bedroomSpinner"
        app:layout_constraintLeft_toRightOf="@id/bedroomSpinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bedroomSpinner" />

    <View
        android:id="@+id/divider2"
        style="@style/DividerHorizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bedroomSpinner" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/location"
        android:drawablePadding="5dp"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/street"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/street"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/address"
        android:importantForAutofill="yes"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/postcode"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/postcode"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/postcode"
        android:importantForAutofill="yes"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/street"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/street" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:hint="@string/city"
        android:importantForAutofill="yes"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/et_country"
        app:layout_constraintTop_toBottomOf="@id/street" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/country"
        android:importantForAutofill="yes"
        android:inputType="textCapWords"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@id/et_city"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/street" />

    <View
        android:id="@+id/divider3"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/poi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/poi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/poi"
        android:drawablePadding="5dp"
        android:text="@string/points_of_interest"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/restaurant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.chip.Chip
        android:id="@+id/restaurant"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/restaurant"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bar"
        app:layout_constraintTop_toBottomOf="@id/poi" />

    <com.google.android.material.chip.Chip
        android:id="@+id/bar"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bars"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/bar"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/restaurant"
        app:layout_constraintRight_toLeftOf="@id/store"
        app:layout_constraintTop_toTopOf="@id/restaurant" />

    <com.google.android.material.chip.Chip
        android:id="@+id/store"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stores"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/store"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/bar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/restaurant" />

    <com.google.android.material.chip.Chip
        android:id="@+id/park"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parks"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/park"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintBottom_toTopOf="@id/divider4"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/school"
        app:layout_constraintTop_toBottomOf="@id/restaurant" />

    <com.google.android.material.chip.Chip
        android:id="@+id/school"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/schools"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/school"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/park"
        app:layout_constraintRight_toLeftOf="@id/hospital"
        app:layout_constraintTop_toTopOf="@id/park" />

    <com.google.android.material.chip.Chip
        android:id="@+id/hospital"
        style="@style/CustomChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/hospitals"
        android:textSize="18sp"
        app:checkedIconVisible="false"
        app:chipIcon="@drawable/hospital"
        app:chipIconEnabled="true"
        app:iconStartPadding="2dp"
        app:layout_constraintLeft_toRightOf="@id/school"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/park" />

    <View
        android:id="@+id/divider4"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/park" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textCapSentences"
        android:selectAllOnFocus="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/divider5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider4"
        tools:ignore="RtlSymmetry" />

    <View
        android:id="@+id/divider5"
        style="@style/DividerHorizontal"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/available_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/available_date"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:drawableStart="@drawable/calendar"
        android:drawablePadding="10dp"
        android:focusable="false"
        android:hint="@string/available_date"
        android:inputType="none"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider5" />

</androidx.constraintlayout.widget.ConstraintLayout>