<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".addAgent.AddAgentView">
        <include android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/main_activity_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" layout="@layout/toolbar"/>

        <ImageView
            android:id="@+id/add_agent_view_picture_agent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/main_activity_toolbar"
            app:layout_constraintTop_toBottomOf="@id/main_activity_toolbar"
            android:src="@drawable/username"/>

        <ImageView
            android:id="@+id/add_agent_view_add_photo"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_activity_toolbar"
            android:src="@drawable/icon_photo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_agent_view_firstname_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/add_agent_view_picture_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_agent_view_firstname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_agent_view_lastname_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/add_agent_view_firstname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_agent_view_lastname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapWords"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_agent_view_email_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/add_agent_view_lastname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_agent_view_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_agent_view_phonenb_layout"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/add_agent_view_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_agent_view_phonenb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>